--- a/templates/post.hbs
+++ b/templates/post.hbs
@@ -19,4 +19,19 @@
   <p>{{body}}</p>
 
   <button class="btn btn-primary" {{action 'edit'}}>Edit</button>
+  <button class="btn btn-danger" {{action 'delete'}}>Delete</button>
+
+
+<h2>Comments</h2>
+
+{{#each comments}}
+<p>
+  {{text}}
+</p>
+{{/each}}
+
+{{#link-to 'new-comment' this class="btn btn-default"}}New comment{{/link-to}}
+
+{{outlet}}
+
 {{/if}}
